k8s/test-integration.yaml
#Begin: Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-integration
  labels:
    app: test-integration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-integration
  template:
    metadata:
      labels:
        app: test-integration
    spec:
      containers:
        - name: test-integration
          image: test-integration
          ports:
            - containerPort: 80

---
#Begin: Service
kind: Service
apiVersion: v1
metadata:
  name: test-integration
spec:
  selector:
    app: test-integration
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
#End: Service
