k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: popular-slides-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: popular-slides-service
                port:
                  number: 3000
          - path: /test-integration
            pathType: Prefix
            backend:
              service:
                name: test-integration
                port:
                  number: 80
